add segunda tela

--- a/QuizFeed/Base.lproj/Main.storyboard
+++ b/QuizFeed/Base.lproj/Main.storyboard
@@ -45,6 +45,7 @@
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imagemAlternativas" destination="fe1-Dd-q3g" id="Voo-cC-oN3"/>
+                                            <segue destination="k2n-tE-NVW" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="h9W-Ay-t2O"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -68,20 +69,55 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="Iqf-0z-FGP">
+        <!--PerguntaDois-->
+        <scene sceneID="pdR-eV-BCa">
             <objects>
-                <viewController id="x4o-RX-9DE" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0zq-99-ybP">
+                <viewController id="k2n-tE-NVW" userLabel="PerguntaDois" customClass="PerguntaDois" customModule="QuizFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AjA-3x-PhS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bJz-Ko-cLB">
+                                <rect key="frame" x="20" y="282" width="374" height="543"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XYs-Cj-czA">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageP2Cell" id="pXO-IN-cIm" customClass="ImageP2Cell" customModule="QuizFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pac-Dh-VvD" customClass="ImageCell" customModule="QuizFeed" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5AO-vd-dm7">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagemAlternativasP2" destination="5AO-vd-dm7" id="94V-SL-1Jh"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="et3-rZ-SZu"/>
+                        <viewLayoutGuide key="safeArea" id="csE-0m-fLf"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionViewP2" destination="bJz-Ko-cLB" id="Prz-eC-d6O"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UDx-kl-xi0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DUT-SV-Vyh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1104" y="124"/>
+            <point key="canvasLocation" x="837.68115942028987" y="129.91071428571428"/>
         </scene>
     </scenes>
 </document>
