--- a/QuizFeed/Base.lproj/Main.storyboard
+++ b/QuizFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -16,8 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1. Escolha uma peça de brechó:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvc-u3-c3J">
+                                <rect key="frame" x="20" y="174" width="374" height="73"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tgR-GP-imd">
-                                <rect key="frame" x="20" y="255" width="374" height="578"/>
+                                <rect key="frame" x="20" y="264" width="374" height="578"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kBt-3h-PSi">
@@ -34,11 +41,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fe1-Dd-q3g">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fe1-Dd-q3g">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="fe1-Dd-q3g" firstAttribute="leading" secondItem="9zh-V1-RVJ" secondAttribute="leading" id="PF6-eH-KGO"/>
+                                                <constraint firstItem="fe1-Dd-q3g" firstAttribute="top" secondItem="9zh-V1-RVJ" secondAttribute="top" id="SgK-SM-agb"/>
                                                 <constraint firstItem="fe1-Dd-q3g" firstAttribute="centerX" secondItem="9zh-V1-RVJ" secondAttribute="centerX" id="bwd-MP-O64"/>
                                                 <constraint firstItem="fe1-Dd-q3g" firstAttribute="centerY" secondItem="9zh-V1-RVJ" secondAttribute="centerY" id="lTQ-YL-vjj"/>
                                             </constraints>
@@ -50,13 +59,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1 - Escolha uma peça de brechó:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvc-u3-c3J">
-                                <rect key="frame" x="20" y="174" width="374" height="73"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -78,7 +80,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bJz-Ko-cLB">
-                                <rect key="frame" x="20" y="282" width="374" height="543"/>
+                                <rect key="frame" x="20" y="264" width="374" height="578"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XYs-Cj-czA">
@@ -95,14 +97,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5AO-vd-dm7">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5AO-vd-dm7">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5AO-vd-dm7" firstAttribute="centerX" secondItem="pac-Dh-VvD" secondAttribute="centerX" id="HWS-Hh-Tde"/>
+                                                <constraint firstItem="5AO-vd-dm7" firstAttribute="leading" secondItem="pac-Dh-VvD" secondAttribute="leading" id="Lpo-eL-nPN"/>
+                                                <constraint firstItem="5AO-vd-dm7" firstAttribute="centerY" secondItem="pac-Dh-VvD" secondAttribute="centerY" id="VJc-rH-8Lo"/>
+                                                <constraint firstItem="5AO-vd-dm7" firstAttribute="top" secondItem="pac-Dh-VvD" secondAttribute="top" id="bFQ-vt-Jc1"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imagemAlternativasP2" destination="5AO-vd-dm7" id="94V-SL-1Jh"/>
+                                            <segue destination="CqW-qI-Rb4" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="JdJ-ue-53X"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -117,7 +125,105 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DUT-SV-Vyh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837.68115942028987" y="129.91071428571428"/>
+            <point key="canvasLocation" x="849" y="138"/>
+        </scene>
+        <!--PerguntaTres-->
+        <scene sceneID="Yun-pv-emr">
+            <objects>
+                <viewController title="PerguntaTres" id="CqW-qI-Rb4" customClass="PerguntaTres" customModule="QuizFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9B8-qY-Ms0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l16-Re-pqN">
+                                <rect key="frame" x="20" y="264" width="374" height="579"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8vi-Ia-uee">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageP3Cell" id="XAR-LZ-xme" customClass="ImageP3Cell">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="J8o-bS-eoj">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tpb-A5-mHT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="leading" secondItem="J8o-bS-eoj" secondAttribute="leading" id="LB8-Ps-3aC"/>
+                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="centerY" secondItem="J8o-bS-eoj" secondAttribute="centerY" id="Mub-UM-slN"/>
+                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="centerX" secondItem="J8o-bS-eoj" secondAttribute="centerX" id="YQE-G4-pI2"/>
+                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="top" secondItem="J8o-bS-eoj" secondAttribute="top" id="dhU-o0-aum"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagemAlternativasP3" destination="tpb-A5-mHT" id="oQF-XQ-Ng4"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="OfO-d0-Q6Y"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionViewP3" destination="l16-Re-pqN" id="rR9-tB-sSa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zXa-ad-3So" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1562" y="138"/>
+        </scene>
+        <!--Resultado-->
+        <scene sceneID="AJU-Ex-K53">
+            <objects>
+                <viewController id="tPS-pl-m0M" customClass="Resultado" customModule="QuizFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9jb-vN-aTx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0oK-RB-knZ">
+                                <rect key="frame" x="122" y="271" width="170" height="240"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Título do anime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dpt-U9-cSG">
+                                <rect key="frame" x="148" y="556" width="118" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Avaliação" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tue-Mz-tLK">
+                                <rect key="frame" x="171" y="607" width="72" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0oK-RB-knZ" firstAttribute="centerX" secondItem="9jb-vN-aTx" secondAttribute="centerX" id="Io1-4c-OtB"/>
+                            <constraint firstItem="Dpt-U9-cSG" firstAttribute="centerY" secondItem="9jb-vN-aTx" secondAttribute="centerY" id="oU3-R1-dvH"/>
+                            <constraint firstItem="Dpt-U9-cSG" firstAttribute="centerX" secondItem="9jb-vN-aTx" secondAttribute="centerX" id="qkW-rS-goW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6N1-CI-9r0"/>
+                    </view>
+                    <connections>
+                        <outlet property="pictureAnime" destination="0oK-RB-knZ" id="YKq-KP-FZv"/>
+                        <outlet property="scoreAnime" destination="tue-Mz-tLK" id="zQR-e1-gHM"/>
+                        <outlet property="titleAnime" destination="Dpt-U9-cSG" id="av6-Ab-Dfr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dx5-Xx-3eI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2248" y="138"/>
         </scene>
     </scenes>
 </document>
