--- a/QuizFeed/Base.lproj/Main.storyboard
+++ b/QuizFeed/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imagemAlternativas" destination="fe1-Dd-q3g" id="Voo-cC-oN3"/>
-                                            <segue destination="k2n-tE-NVW" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="h9W-Ay-t2O"/>
+                                            <segue destination="k2n-tE-NVW" kind="presentation" identifier="PerguntaDois" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="h9W-Ay-t2O"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -110,7 +110,7 @@
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imagemAlternativasP2" destination="5AO-vd-dm7" id="94V-SL-1Jh"/>
-                                            <segue destination="CqW-qI-Rb4" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="JdJ-ue-53X"/>
+                                            <segue destination="DCA-Rb-Ytk" kind="presentation" modalPresentationStyle="fullScreen" id="hzS-7W-uw3"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -127,60 +127,56 @@
             </objects>
             <point key="canvasLocation" x="849" y="138"/>
         </scene>
-        <!--PerguntaTres-->
-        <scene sceneID="Yun-pv-emr">
+        <!--Pergunta Tres-->
+        <scene sceneID="F50-HH-uqb">
             <objects>
-                <viewController title="PerguntaTres" id="CqW-qI-Rb4" customClass="PerguntaTres" customModule="QuizFeed" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="9B8-qY-Ms0">
+                <viewController id="DCA-Rb-Ytk" customClass="PerguntaTres" customModule="QuizFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="15u-E1-GVk">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l16-Re-pqN">
-                                <rect key="frame" x="20" y="264" width="374" height="579"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xM5-gc-rO6">
+                                <rect key="frame" x="20" y="256" width="374" height="574"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8vi-Ia-uee">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kpX-UC-dkt">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageP3Cell" id="XAR-LZ-xme" customClass="ImageP3Cell">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageP3Cell" id="wFh-gw-0Dt" customClass="ImageP3Cell" customModule="QuizFeed" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="J8o-bS-eoj">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8UA-U5-Cg3">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tpb-A5-mHT">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ORh-Py-rLu">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="leading" secondItem="J8o-bS-eoj" secondAttribute="leading" id="LB8-Ps-3aC"/>
-                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="centerY" secondItem="J8o-bS-eoj" secondAttribute="centerY" id="Mub-UM-slN"/>
-                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="centerX" secondItem="J8o-bS-eoj" secondAttribute="centerX" id="YQE-G4-pI2"/>
-                                                <constraint firstItem="tpb-A5-mHT" firstAttribute="top" secondItem="J8o-bS-eoj" secondAttribute="top" id="dhU-o0-aum"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="imagemAlternativasP3" destination="tpb-A5-mHT" id="oQF-XQ-Ng4"/>
+                                            <outlet property="imagemAlternativasP3" destination="ORh-Py-rLu" id="1oE-zL-8Aw"/>
+                                            <segue destination="tPS-pl-m0M" kind="presentation" modalPresentationStyle="fullScreen" id="AA9-H3-awI"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="OfO-d0-Q6Y"/>
+                        <viewLayoutGuide key="safeArea" id="Mul-Iq-dFp"/>
                     </view>
                     <connections>
-                        <outlet property="collectionViewP3" destination="l16-Re-pqN" id="rR9-tB-sSa"/>
+                        <outlet property="collectionViewP3" destination="xM5-gc-rO6" id="f4J-to-3UY"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zXa-ad-3So" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A6Y-ko-eWV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1562" y="138"/>
+            <point key="canvasLocation" x="1540.5797101449277" y="142.63392857142856"/>
         </scene>
         <!--Resultado-->
         <scene sceneID="AJU-Ex-K53">
